[gd_scene load_steps=12 format=2]

[ext_resource path="res://Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.tres" type="Theme" id=2]
[ext_resource path="res://assets/SupermercadoOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://tiles/Tile.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menu.gd" type="Script" id=5]
[ext_resource path="res://ColorSelectionCircle.tscn" type="PackedScene" id=6]
[ext_resource path="res://Mouse.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Chad Crouch - Algorithms.mp3" type="AudioStream" id=8]
[ext_resource path="res://Button.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[node name="Menu" type="Node2D"]
position = Vector2( 0, 33 )
script = ExtResource( 5 )

[node name="Background2" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -33 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 36.0
margin_right = 1035.0
margin_bottom = 180.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 1 )
text = "Col    rall"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_left = 186.0
margin_top = 247.0
margin_right = 564.0
margin_bottom = 373.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Absorb the neighborhood
colors selecting a color
to paint your starting blob."
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 636, 254 )
scale = Vector2( 1.5, 1.5 )
cell_size = Vector2( 36, 36 )
format = 1
__meta__ = {
"_edit_group_": true
}

[node name="Tile10" parent="TileMap" instance=ExtResource( 4 )]
position = Vector2( 0, 36 )
color_name = "Blue"
visible_bg = true

[node name="Tile11" parent="TileMap" instance=ExtResource( 4 )]
position = Vector2( 36, 36 )
color_name = "Yellow"

[node name="Tile12" parent="TileMap" instance=ExtResource( 4 )]
position = Vector2( 72, 36 )
color_name = "Blue"
visible_bg = true

[node name="Tile00" parent="TileMap" instance=ExtResource( 4 )]
color_name = "Blue"
visible_bg = true

[node name="Tile03" parent="TileMap" instance=ExtResource( 4 )]
position = Vector2( 108, 0 )
color_name = "Yellow"

[node name="Tile13" parent="TileMap" instance=ExtResource( 4 )]
position = Vector2( 108, 36 )

[node name="Tile23" parent="TileMap" instance=ExtResource( 4 )]
position = Vector2( 108, 72 )

[node name="Tile22" parent="TileMap" instance=ExtResource( 4 )]
position = Vector2( 72, 72 )
color_name = "Yellow"

[node name="Tile21" parent="TileMap" instance=ExtResource( 4 )]
position = Vector2( 36, 72 )
color_name = "Yellow"

[node name="Tile20" parent="TileMap" instance=ExtResource( 4 )]
position = Vector2( 0, 72 )

[node name="Tile01" parent="TileMap" instance=ExtResource( 4 )]
position = Vector2( 36, 0 )
color_name = "Blue"
visible_bg = true

[node name="Tile02" parent="TileMap" instance=ExtResource( 4 )]
position = Vector2( 72, 0 )
color_name = "Blue"
visible_bg = true

[node name="Animation1" type="Timer" parent="."]
one_shot = true

[node name="ColorSelection" parent="." instance=ExtResource( 6 )]
position = Vector2( 522, 90 )

[node name="Mouse" parent="." instance=ExtResource( 7 )]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
position = Vector2( 594, -69 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationSetup" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
bus = "Music"

[node name="Box" type="HBoxContainer" parent="."]
margin_top = 399.0
margin_right = 1026.0
margin_bottom = 561.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Box"]
margin_left = 441.0
margin_right = 585.0
margin_bottom = 162.0
alignment = 1

[node name="PlayBtn" parent="Box/VBoxContainer" instance=ExtResource( 9 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 9.0
margin_right = 144.0
margin_bottom = 153.0
text = "Play!"

[connection signal="timeout" from="Animation1" to="." method="_on_Animation1_timeout"]
[connection signal="timeout" from="AnimationSetup" to="." method="_on_AnimationSetup_timeout"]
[connection signal="pressed" from="Box/VBoxContainer/PlayBtn" to="." method="_on_Button_pressed"]
